--- a/config/mean-teacher/speechcommand.yaml
+++ b/config/mean-teacher/speechcommand.yaml
@@ -1,3 +1,9 @@
+# @package _global_
+
+defaults:
+  - aug@stu_aug: ident
+  - aug@tea_aug: ident
+
 hydra:
   hydra_logging:
     disable_existing_loggers: false
