Mod/Fix: Refactor DCT & MT data loading. Add aug_s and aug_u to DCT. Fix trackers in DCT. Fix batch_u when aug are differents in MT. Set shuffle to False for validation loaders.

--- a/config/mean-teacher/gsc.yaml
+++ b/config/mean-teacher/gsc.yaml
@@ -15,7 +15,7 @@ hardware:
   nb_gpu: 1
 
 dataset:
-  dataset: speechcommand
+  dataset: gsc
   num_classes: 35
 
 model:
@@ -49,11 +49,12 @@ mixup:
   label: true
 
 path:
-  dataset_root: ../../datasets
-  checkpoint_root: ../../model_save
-  tensorboard_root: ../../tensorboard
+  dataset_root: datasets
+  checkpoint_root: model_save
+  tensorboard_root: tensorboard
   checkpoint_path: ${path.checkpoint_root}/${dataset.dataset}/mean-teacher
   tensorboard_path: ${path.tensorboard_root}/${dataset.dataset}/mean-teacher
 
-tag: ""
+tag: "NOTAG"
 resume: null
+download: false
