--- a/config/deep-co-training/gsc.yaml
+++ b/config/deep-co-training/gsc.yaml
@@ -1,3 +1,9 @@
+# @package _global_
+
+defaults:
+  - aug@aug_s: ident
+  - aug@aug_u: ident
+
 hydra:
   hydra_logging:
     disable_existing_loggers: false
@@ -9,7 +15,7 @@ hardware:
   nb_gpu: 1
 
 dataset:
-  dataset: speechcommand
+  dataset: gsc
   num_classes: 35
 
 model:
@@ -42,8 +48,12 @@ mixup:
   label: true
 
 path:
-  dataset_root: ../../datasets
-  checkpoint_root: ../../model_save
-  tensorboard_root: ../../tensorboard
+  dataset_root: datasets
+  checkpoint_root: model_save
+  tensorboard_root: tensorboard
   checkpoint_path: ${path.checkpoint_root}/${dataset.dataset}/deep-co-training
   tensorboard_path: ${path.tensorboard_root}/${dataset.dataset}/deep-co-training
+
+tag: "NOTAG"
+resume: null
+download: false
