--- a/config/mean-teacher/esc10.yaml
+++ b/config/mean-teacher/esc10.yaml
@@ -1,3 +1,9 @@
+# @package _global_
+
+defaults:
+  - aug@stu_aug: ident
+  - aug@tea_aug: ident
+
 hydra:
   hydra_logging:
     disable_existing_loggers: false
@@ -43,10 +49,12 @@ mixup:
   label: true
 
 path:
-  dataset_root: ../../datasets
-  checkpoint_root: ../../model_save
-  tensorboard_root: ../../tensorboard
+  dataset_root: datasets
+  checkpoint_root: model_save
+  tensorboard_root: tensorboard
   checkpoint_path: ${path.checkpoint_root}/${dataset.dataset}/mean-teacher
   tensorboard_path: ${path.tensorboard_root}/${dataset.dataset}/mean-teacher
 
-tag: ""
+tag: "NOTAG"
+resume: null
+download: false
