--- a/config/deep-co-training/esc10.yaml
+++ b/config/deep-co-training/esc10.yaml
@@ -50,7 +50,7 @@ mixup:
 
 path:
   dataset_root: datasets
-  checkpoint_root: model_save
+  # checkpoint_root: model_save
   tensorboard_root: tensorboard
   checkpoint_path: ${path.checkpoint_root}/${dataset.dataset}/deep-co-training
   tensorboard_path: ${path.tensorboard_root}/${dataset.dataset}/deep-co-training
