--- a/config/supervised/esc10.yaml
+++ b/config/supervised/esc10.yaml
@@ -18,7 +18,7 @@ model:
 train_param:
   supervised_ratio: 1.0
   batch_size: 64
-  nb_epoch: 100
+  epochs: 100
   learning_rate: 0.003
   seed: 1234
   resume: false
