--- a/config/supervised/ubs8k.yaml
+++ b/config/supervised/ubs8k.yaml
@@ -18,7 +18,7 @@ model:
 train_param:
   supervised_ratio: 1.0
   batch_size: 64
-  nb_epoch: 200
+  epochs: 200
   learning_rate: 0.001
   seed: 1234
   resume: false
