--- a/requirements.txt
+++ b/requirements.txt
@@ -174,3 +174,5 @@ widgetsnbextension==3.5.1
 wrapt==1.12.1
 yarl==1.6.3
 zipp @ file:///tmp/build/80754af9/zipp_1604001098328/work
+
+audiomentations==0.25.1
