--- a/config/mean-teacher/aug/spec_aug.yaml
+++ b/config/mean-teacher/aug/spec_aug.yaml
@@ -1,6 +1,6 @@
 # @package aug
 
-_target_: "SSL.utils.augments.spec_aug.SpecAugmentation"
+_target_: "SSL.util.augments.spec_aug.SpecAugmentation"
 
 time_drop_width: 64
 time_stripes_num: 2
